--- a/test_products_task/templates/products/category_list.html
+++ b/test_products_task/templates/products/category_list.html
@@ -7,6 +7,7 @@
         {% for category in category_list %}
             <a href="{{ category.get_absolute_url }}" class="list-group-item">
               <h4 class="list-group-item-heading">{{ category.name }}</h4>
+              <h5>Amount: {{category.number}}</h5>
             </a>
         {% endfor %}
     </div>
