--- a/test_products_task/templates/products/product_detail.html
+++ b/test_products_task/templates/products/product_detail.html
@@ -1,23 +1,48 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>{{ product.name }}</h1>
-<h5>{{ product.price }}</h5>
-<h5>{{ product.description }}</h5>
-<h6>Likes {{ product.likes.count }}</h6>
+<div class="product_detail__page">
+    <div class="product_detai__info">
+        <h1>{{ product.name }}</h1>
+        <h5>Product Price: {{ product.price }}</h5>
+        <h5>Product Description: {{ product.description }}</h5>
+        <h6>Likes: {{ product.likes.count }}</h6>
+        <h6>    {% for comment in comments%}
+                <br>Автор - {{comment.user}}   </br>
+                <br>Коментарий - {{comment.text}}</br> 
+                {% endfor %}        
+        </h6>
+
+        <button onclick="send()">Like</button>
+        <ul class="list-group">
+            {% for date, count in likes.items %}
+                <li class="list-group-item">{{ date }} - {{ count }}</li>
+            {% endfor %}
+     
+
+     
+        </ul>    
+    </div>
+    <div>
+        <img class="product_detail__image" src="http://localhost:8000/media/{{ product.image }}" alt="{{ product.name }} image">
+    </div>
+</div>
+   
+<h3>Popular</h3>
 <ul class="list-group">
-    {% for date, count in likes.items %}
-        <li class="list-group-item">{{ date }} - {{ count }}</li>
+    {% for product in popular_list %}
+        <li class="list-group-item">
+            <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
+        </li>
     {% endfor %}
 </ul>
 
-<h3>Popular</h3>
-<ul class="list-group">
-{% for product in popular_list %}
-    <li class="list-group-item">
-        <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
-    </li>
-{% endfor %}
-</ul>
-
+<script>
+    send = () => {
+        fetch('http://{{ request.get_host }}/products/{{ product.pk }}/like/', {method: 'POST'})
+        .then(res => res.json())
+        .catch(err => window.location.reload())
+    }
+</script>
 {% endblock content %}
+
